--- a/src/main/webapp/WEB-INF/views/hospital/savePage.html
+++ b/src/main/webapp/WEB-INF/views/hospital/savePage.html
@@ -19,7 +19,7 @@
     <input type="hidden" th:field="*{id}">
     <div class="form-group">
       <label for="nameInput" class="form-label">Name</label>
-      <input type="text" th:field="*{name}" id="nameInput" class="form-control form-control-lg">
+      <input type="text" th:field="*{name}" id="nameInput" class="form-control form-control-lg" required>
     </div>
     <div class="form-group">
       <label for="input" class="form-label">Address</label>
