--- a/src/main/webapp/WEB-INF/views/department/saveDepartment.html
+++ b/src/main/webapp/WEB-INF/views/department/saveDepartment.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Save Department</title>
+    <title>Save Departments</title>
 </head>
 <body>
 <div class="wrapper-btn">
