--- a/src/main/webapp/WEB-INF/views/hospital/hospitals.html
+++ b/src/main/webapp/WEB-INF/views/hospital/hospitals.html
@@ -8,6 +8,16 @@
       display: flex;
       flex-wrap: wrap;
     }
+    .btn-style{
+      border:none;
+      border-radius: 7px;
+      background-color:blue;
+      font-weight: inherit;
+      color: white;
+      padding: 10px 15px ;
+      font-size: medium;
+
+    }
   </style>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
         rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
@@ -22,7 +32,11 @@
       <p class="card-text" th:text="${hospital.address}">Address</p>
 
       <form th:method="DELETE" th:action="@{/hospitals/{id}/delete(id=${hospital.getId()})}">
-        <input type="submit" class="btn btn-outline-primary"  th:value="  Delete  "/>
+
+        <p style="text-align:center;">
+          <input type="submit" class="btn btn-outline-primary"  th:value="  Delete  "/>
+
+          <a class="btn btn-outline-primary btn-style" role="button" href="/hospitals/savePage">Add new Hospital</a></p>
       </form>
       <form th:method="UPDATE" th:action="@{/WEB-INF/views/hospital/hospitals.html/update(id${hospital.id})}">
         <input type="submit" class="btn btn-outline-primary"  th:value="  Update  "/>
