--- a/src/main/webapp/WEB-INF/views/hospital/hospitals.html
+++ b/src/main/webapp/WEB-INF/views/hospital/hospitals.html
@@ -24,33 +24,36 @@
         crossorigin="anonymous">
 </head>
 <body>
-<div class="container" style="width: 83%; margin: 4px auto">
-  <div class="card" style="width: 43rem;"
-       th:each="hospital:${hospitals}">
-    <div class="card-body">
+<div class="container" style="width: 78%; margin: 0 auto">
+  <div class="card" style="width: 18rem;" th:each="hospital:${hospitals}">
+      <img th:src="${hospital.getImage()}" object-fit width="223" height="170px" class="card-img-top" alt="Image">
+      <div class="card-body">
       <h5 class="card-title" th:text="${hospital.name}">Name</h5>
       <p class="card-text" th:text="${hospital.address}">Address</p>
 
-      <form th:method="DELETE" th:action="@{/hospitals/{id}/delete(id=${hospital.getId()})}">
+      <a th:href="@{/{id}/departments(id=${hospital.getId()})}">
+        <input type="submit" class="btn btn-outline-primary"  th:value="  Departments  "/>
+      </a>
+</p>
 
+      <form th:method="DELETE" th:action="@{/hospitals/{id}/delete(id=${hospital.getId()})}">
         <p style="text-align:center;">
           <input type="submit" class="btn btn-outline-primary"  th:value="  Delete  "/>
-
-          <a class="btn btn-outline-primary btn-style" role="button" href="/hospitals/savePage">Add new Hospital</a></p>
+        </p>
       </form>
-      <form th:method="UPDATE" th:action="@{/WEB-INF/views/hospital/hospitals.html/update(id${hospital.id})}">
-        <input type="submit" class="btn btn-outline-primary"  th:value="  Update  "/>
-      </form>
-    </div>
+<!--      <form th:method="UPDATE" th:action="@{/WEB-INF/views/hospital/hospitals.html/update(id${hospital.id})}">-->
+<!--        <input type="submit" class="btn btn-outline-primary"  th:value="  Update  "/>-->
+<!--      </form>-->
   </div>
 </div>
+</div>
+
 </body>
 
 <br>
 <br>
-
-<p style="text-align:center;">
-  <a class="btn btn-outline-primary" role="button" href="/hospitals/savePage">Add new Hospital</a></p>
+<p>
+    <a class="btn btn-outline-primary btn-style" role="button" href="/hospitals/savePage">Add new Hospital</a>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
