--- a/src/main/webapp/WEB-INF/views/hospital/savePage.html
+++ b/src/main/webapp/WEB-INF/views/hospital/savePage.html
@@ -30,6 +30,10 @@
   <form class="p-5 bg-light" action="#" th:action="@{/hospitals/new}" th:object="${hospital}" method="post">
     <input type="hidden" th:field="*{id}">
     <div class="form-group">
+      <label for="nameInput" class="form-label">Image</label>
+      <input type="text" th:field="*{image}" id="imageInput" class="form-control form-control-lg" required>
+    </div>
+    <div class="form-group">
       <label for="nameInput" class="form-label">Name</label>
       <input type="text" th:field="*{name}" id="nameInput" class="form-control form-control-lg" required>
     </div>
