--- a/src/main/webapp/WEB-INF/views/doctor/doctors.html
+++ b/src/main/webapp/WEB-INF/views/doctor/doctors.html
@@ -12,7 +12,7 @@
     <a th:href="@{/url}">
         <button class="btn btn-primary" type="button">back</button>
     </a>
-    <a th:href="@{/{id}/departments/saveDepartment (id=${hospitalId})}">
+    <a th:href="@{/{id}/doctors/saveDoctor (id=${hospitalId})}">
         <button class="btn btn-primary" type="button">Create</button>
     </a>
 </div>
@@ -26,10 +26,10 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="departmnet : ${departments}">
-            <td th:text="${departmnet.getId()}"></td>
-            <td th:text="${departmnet.name}"></td>
-            <td th:text="${departmnet.hospital.name}"></td>
+        <tr th:each="doctor : ${doctors}">
+            <td th:text="${doctor.id}"></td>
+            <td th:text="${doctor.lastName}"></td>
+            <td th:text="${doctor.hospital.name}"></td>
 
             <!--            <td>-->
             <!--                <a th:href="@{/companies(id=${company.id})}">-->
