--- a/src/main/webapp/WEB-INF/views/hospital/hospitals.html
+++ b/src/main/webapp/WEB-INF/views/hospital/hospitals.html
@@ -30,10 +30,12 @@
       <div class="card-body">
       <h5 class="card-title" th:text="${hospital.name}">Name</h5>
       <p class="card-text" th:text="${hospital.address}">Address</p>
-
       <a th:href="@{/{id}/departments(id=${hospital.getId()})}">
         <input type="submit" class="btn btn-outline-primary"  th:value="  Departments  "/>
       </a>
+          <a th:href="@{/{id}/doctors(id=${hospital.getId()})}">
+              <input type="submit" class="btn btn-outline-primary" th:value="  Doctors  "/>
+          </a>
 </p>
 
       <form th:method="DELETE" th:action="@{/hospitals/{id}/delete(id=${hospital.getId()})}">
