--- a/src/main/webapp/WEB-INF/views/patient/patients.html
+++ b/src/main/webapp/WEB-INF/views/patient/patients.html
@@ -3,14 +3,25 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Departments</title>
+  <title>Patients</title>
+  <style>
+    body{
+      background-image: url("https://c8.alamy.com/comp/FF81WN/a-busy-out-patient-department-opd-at-st-francis-hospital-ifakara-tanzania-FF81WN.jpg");
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+  </style>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+        rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+        crossorigin="anonymous">
 </head>
 <body>
+
 <div class="wrapper-btn">
+
   <a th:href="@{/url}">
-    <button class="btn btn-primary" type="button">back</button>
   </a>
-  <a th:href="@{/departments/saveDepartment}">
+  <a th:href="@{/{id}/patients/savePatient(id=${hospitalId})}">
     <button class="btn btn-primary" type="button">Create</button>
   </a>
 </div>
@@ -19,24 +30,23 @@
     <thead class="thead-dark">
     <tr>
       <th>Id</th>
-      <th>Name</th>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>Phone Number</th>
+      <th>Gender</th>
+      <th>email</th>
       <th>Hospital</th>
     </tr>
     </thead>
     <tbody>
-    <tr th:each="departmnet : ${departments}">
-      <td th:text="${departmnet.getId()}"></td>
-      <td th:text="${departmnet.name}"></td>
-      <td th:text="${departmnet.hospital}"></td>
-
-      <!--            <td>-->
-      <!--                <a th:href="@{/companies(id=${company.id})}">-->
-      <!--                    <button class="btn btn-primary" type="submit">edit</button>-->
-      <!--                </a>-->
-      <!--                <a th:href="@{/url/{id}(id=${peremenyi.id})}">-->
-      <!--                    <button class="btn btn-danger" type="submit">delete</button>-->
-      <!--                </a>-->
-      <!--            </td>-->
+    <tr th:each="patient : ${patients}">
+      <td th:text="${patient.id}"></td>
+      <td th:text="${patient.firstName}"></td>
+      <td th:text="${patient.lastName}"></td>
+      <td th:text="${patient.phoneNumber}"></td>
+      <td th:text="${patient.gender}"></td>
+      <td th:text="${patient.email}"></td>
+      <td th:text="${patient.hospital.name}"></td>
     </tr>
     </tbody>
   </table>
