--- a/src/main/webapp/WEB-INF/views/department/departments.html
+++ b/src/main/webapp/WEB-INF/views/department/departments.html
@@ -38,10 +38,10 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="departmnet : ${departments}">
-            <td th:text="${departmnet.getId()}"></td>
-            <td th:text="${departmnet.name}"></td>
-            <td th:text="${departmnet.hospital.name}"></td>
+        <tr th:each="department : ${departments}">
+            <td th:text="${department.getId()}"></td>
+            <td th:text="${department.name}"></td>
+            <td th:text="${department.hospital.name}"></td>
 
         </tr>
         </tbody>
