--- a/src/main/webapp/WEB-INF/views/doctor/doctors.html
+++ b/src/main/webapp/WEB-INF/views/doctor/doctors.html
@@ -12,47 +12,15 @@
 
     </style>
     <meta charset="UTF-8">
-    <title>Departments</title>
+    <title>Doctors</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
           rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
           crossorigin="anonymous">
 </head>
 <body>
 
-<div class="wrapper-btn">
-
-    <a th:href="@{/url}">
-        <button class="btn btn-primary" type="button">back</button>
-    </a>
-    <a th:href="@{/{id}/doctors/saveDoctor (id=${hospitalId})}">
-        <button class="btn btn-primary" type="button">Create</button>
-
-
-    </a>
-
-<!--    <td>-->
-<!--        <td th:each="doctor : ${doctors}">-->
-<!--        <form th:method="POST"-->
-<!--                th:action="@{/{id}/{doctors}/{doctorId}assignDoctor(id=${hospitalId},doctorId=${doctor.id})}">-->
-
-
-
-<!--            <select name="departments" class="form-select form-select-sm" aria-label=".form-select-sm example"-->
-<!--                    th:object="${doctor}" th:field="*{id}">-->
-<!--                <option th:each = "doctor${doctors}"-->
-<!--                        th:value = "${doctor.firsName}">-->
-
-<!--                </option>-->
-
-<!--            </select>-->
-<!--            <input type="submit" value="submit"/>-->
-<!--        </form>-->
-<!--</td>-->
-<!--    </td>-->
-</div>
-<div class="container mt-3">
-    <table class="table table-striped">
-        <thead class="thead-dark">
+<table class="table">
+    <thead class="table-dark">
         <tr>
             <th>Id</th>
             <th>First Name</th>
@@ -84,21 +52,30 @@
                     <input type="submit" value="submit" class="input" />
                 </form>
             </td>
+            <td>
+                <a
+                        th:href="@{/{id}/doctors/{doctorId}/edit(id=${id}, doctorId=${doctor.getId()})}">
+                    <input type="submit" class="btn btn-outline-primary" th:value="  Update  "></input>
+                </a>
+                <form th:method="DELETE"
+                      th:action="@{/{id}/doctors/{doctorId}/delete(id=${hospitalId}, doctorId=${doctor.id})}">
+                    <input type="submit" class="btn btn-outline-primary" th:value="  Delete  "></input>
+                </form>
+                <a>
+                </a>
+            </td>
 
 
 
-            <!--            <td>-->
-            <!--                <a th:href="@{/companies(id=${company.id})}">-->
-            <!--                    <button class="btn btn-primary" type="submit">edit</button>-->
-            <!--                </a>-->
-            <!--                <a th:href="@{/url/{id}(id=${peremenyi.id})}">-->
-            <!--                    <button class="btn btn-danger" type="submit">delete</button>-->
-            <!--                </a>-->
-            <!--            </td>-->
         </tr>
+            <div class="btn-container">
+                <a th:href="@{/{id}/doctors/saveDoctor (id=${hospitalId})}">
+                    <button class="btn btn-primary" type="button">Add new Doctors</button>
+                </a>
+            </div>
         </tbody>
     </table>
-</div>
+
 
 </body>
 </html>
