--- a/src/main/webapp/WEB-INF/views/doctor/doctors.html
+++ b/src/main/webapp/WEB-INF/views/doctor/doctors.html
@@ -2,80 +2,193 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <style>
-
-    body{
-    background-image: url("https://www.shutterstock.com/image-photo/surgeon-female-doctor-walk-through-260nw-1189798327.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    }
-
-    </style>
     <meta charset="UTF-8">
     <title>Doctors</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
           rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
           crossorigin="anonymous">
+    <style>
+
+        *, *:before, *:after {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            background: white;
+            font-family: 'Open Sans', sans-serif;
+        }
+
+        table {
+            background: #012B39;
+            border-radius: 0.25em;
+            border-collapse: collapse;
+            /*margin: 0 auto;*/
+            /*margin-top: 250px;*/
+            width: 100%;
+            height: 900px
+        }
+
+        th {
+            border-bottom: 1px solid #364043;
+            color: rgba(224, 182, 90, 0.97);
+            font-size: 0.85em;
+            font-weight: 600;
+            padding: 0.5em 1em;
+            text-align: left;
+        }
+
+        td {
+            color: white;
+            font-weight: 400;
+            padding: 0.65em 1em;
+        }
+
+        .disabled td {
+            color: #4F5F64;
+        }
+
+        tbody tr {
+            transition: background 0.25s ease;
+        }
+
+        /*tbody tr:hover {*/
+        /*    background: #014055;*/
+        /*}*/
+
+        button {
+            background-color: dimgray;
+            color: white;
+            width: 100px;
+            height: 40px;
+            border-radius: 5px;
+            border: none
+
+        }
+
+        input {
+            background-color: dimgray;
+            border-radius: 5px;
+            color: white;
+            width: 100px;
+            height: 40px;
+        }
+
+        button:hover {
+            background: darkblue;
+        }
+
+    </style>
+
 </head>
 <body>
-
-<table class="table">
+<table>
     <thead class="table-dark">
-        <tr>
-            <th>Id</th>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Position </th>
-            <th>email</th>
-            <th>Hospital</th>
-            <th>Assign Department</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="doctor : ${doctors}">
-            <td th:text="${doctor.id}"></td>
-            <td th:text="${doctor.firsName}"></td>
-            <td th:text="${doctor.lastName}"></td>
-            <td th:text="${doctor.position}"></td>
-            <td th:text="${doctor.email}"></td>
-            <td th:text="${doctor.hospital.name}"></td>
-
-            <td>
-                <form th:method="POST"
-                      th:action="@{/{id}/doctors/{doctorId}/{departmentId}/assignDoctor(id=${hospitalId})(doctorId=${doctor.id})}">
-                    <select name="instructor" class="form-select form-select-sm" aria-label=".form-select-sm example"
-                            th:object="${department}" th:field="*{id}">
-                        <option th:each="department : ${departments}"
-                                th:value="${department.id}"
-                                th:text="${department.name}"></option>
-                    </select>
-                    <input type="submit" value="submit" class="input" />
-                </form>
-            </td>
-            <td>
-                <a
-                        th:href="@{/{id}/doctors/{doctorId}/edit(id=${id}, doctorId=${doctor.getId()})}">
-                    <input type="submit" class="btn btn-outline-primary" th:value="  Update  "></input>
-                </a>
-                <form th:method="DELETE"
-                      th:action="@{/{id}/doctors/{doctorId}/delete(id=${hospitalId}, doctorId=${doctor.id})}">
-                    <input type="submit" class="btn btn-outline-primary" th:value="  Delete  "></input>
-                </form>
-                <a>
-                </a>
-            </td>
+    <tr>
+        <th>Id</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Position</th>
+        <th>email</th>
+        <th>Hospital</th>
+        <th>Assign Department</th>.
+        <th>Update</th>
+        <th>Delete</th>
+    </tr>
+    </thead>
+    <tbody class="table-success">
+    <tr th:each="doctor : ${doctors}">
+        <td th:text="${doctor.id}"></td>
+        <td th:text="${doctor.firsName}"></td>
+        <td th:text="${doctor.lastName}"></td>
+        <td th:text="${doctor.position}"></td>
+        <td th:text="${doctor.email}"></td>
+        <td th:text="${doctor.hospital.name}"></td>
 
 
-
-        </tr>
-            <div class="btn-container">
-                <a th:href="@{/{id}/doctors/saveDoctor (id=${hospitalId})}">
-                    <button class="btn btn-primary" type="button">Add new Doctors</button>
-                </a>
-            </div>
-        </tbody>
-    </table>
-
-
+        <td><a>
+            <a th:href="@{/{id}/doctors/{doctorId}/departments(id=${hospitalId}, doctorId=${doctor.id})}">
+                <input type="submit" class="btn btn-outline-primary" th:value="  Departments  ">
+            </a>
+        </a></td>
+        <td><a th:href="@{/update/{id}(id=${doctor.id})}">
+            <button>Update</button>
+        </a>
+        </td>
+        <td><a th:method="GET"
+               th:href="@{/{id}/doctors{doctorId}/delete(id=${hospitalId},doctorId=${doctor.id})}">
+            <button>Delete</button>
+        </a>
+        </td>
+    </tr>
+    </tbody>
+</table>
+<br><br><br><br>
+<div style="text-align: center">
+    <a th:href="@{/instructors/{id}/adddoctor(id=${hospitalId})}">
+        <button style="font-size: 25px; height: 40px;width: 200px; margin-bottom:50px; border-radius: 5px"> Add Doctor
+        </button>
+    </a>
+</div>
 </body>
+<!--&lt;!&ndash;<body>&ndash;&gt;-->
+
+<!--&lt;!&ndash;<table class="table">&ndash;&gt;-->
+<!--&lt;!&ndash;    <thead class="table-dark">&ndash;&gt;-->
+<!--&lt;!&ndash;        <tr>&ndash;&gt;-->
+<!--&lt;!&ndash;            <th>Id</th>&ndash;&gt;-->
+<!--&lt;!&ndash;            <th>First Name</th>&ndash;&gt;-->
+<!--&lt;!&ndash;            <th>Last Name</th>&ndash;&gt;-->
+<!--&lt;!&ndash;            <th>Position </th>&ndash;&gt;-->
+<!--&lt;!&ndash;            <th>email</th>&ndash;&gt;-->
+<!--&lt;!&ndash;            <th>Hospital</th>&ndash;&gt;-->
+<!--&lt;!&ndash;            <th>Assign Department</th>&ndash;&gt;-->
+<!--&lt;!&ndash;        </tr>&ndash;&gt;-->
+<!--&lt;!&ndash;        </thead>&ndash;&gt;-->
+<!--&lt;!&ndash;        <tbody>&ndash;&gt;-->
+<!--&lt;!&ndash;        <tr th:each="doctor : ${doctors}">&ndash;&gt;-->
+<!--&lt;!&ndash;            <td  th:text="${doctor.id}"></td>&ndash;&gt;-->
+<!--&lt;!&ndash;            <td th:text="${doctor.firsName}"></td>&ndash;&gt;-->
+<!--&lt;!&ndash;            <td th:text="${doctor.lastName}"></td>&ndash;&gt;-->
+<!--&lt;!&ndash;            <td th:text="${doctor.position}"></td>&ndash;&gt;-->
+<!--&lt;!&ndash;            <td th:text="${doctor.email}"></td>&ndash;&gt;-->
+<!--&lt;!&ndash;            <td th:text="${doctor.hospital.name}"></td>&ndash;&gt;-->
+
+
+<!--            <td>-->
+<!--                <form th:method="POST"-->
+<!--                      th:action="@{/{id}/doctors/{doctorId}/{department}/assignDoctor(id=${hospitalId}, department=${department}, doctorId=${doctor.getId()})}" th:object="doctor">-->
+<!--                    <select name="instructor" class="form-select form-select-sm" aria-label=".form-select-sm example"-->
+<!--                             th:field="*{id}">-->
+<!--                        <option th:each="department : ${departments}"-->
+<!--                                th:value="${department.id}"-->
+<!--                                th:text="${department.name}"></option>-->
+<!--                    </select>-->
+<!--                    <input type="submit" value="submit" class="input" />-->
+<!--                </form>-->
+<!--                <a th:href="@{/{id}/doctors/{doctorId}/departments(id=${hospitalId}, doctorId=${doctor.getId()})}">-->
+<!--                    <input type="submit" class="btn btn-outline-primary" th:value="  Departments  ">-->
+<!--                </a>-->
+<!--            </td>-->
+<!--            <td>-->
+<!--                <a th:href="@{/{id}/doctors/{doctorId}/edit(id=${id}, doctorId=${doctor.getId()})}">-->
+<!--                    <input type="submit" class="btn btn-outline-primary" th:value="  Update  "></input>-->
+<!--                </a>-->
+<!--                <form th:method="DELETE"-->
+<!--                      th:action="@{/{id}/doctors/{doctorId}/delete(id=${hospitalId}, doctorId=${doctor.id})}">-->
+<!--                    <input type="submit" class="btn btn-outline-primary" th:value="  Delete  "></input>-->
+<!--                </form>-->
+<!--                <a>-->
+<!--                </a>-->
+<!--            </td>-->
+<!--        </tr>-->
+<!--        </tbody>-->
+<!--    </table>-->
+<!--<div class="btn-container">-->
+<!--    <a th:href="@{/{id}/doctors/saveDoctor (id=${hospitalId})}">-->
+<!--        <button class="btn btn-primary" type="button">Add new Doctors</button>-->
+<!--    </a>-->
+<!--</div>-->
+<!--</body>-->
 </html>
